# david-share

./: .gitattributes  README.md  player.html  readme (2).md
.streamlit/: config.toml
Agents/A2A-Demo/: readme.md
Agents/A2A-Demo/demo-code/: __main__.py  foundry_agent_executor.py  pyproject.toml  test_client-xinyudavid.py
Agents/AI-Agent-Private-Endpoint/: readme.md
Agents/AI-Content-Safety/: readme.md
Agents/Agent-Design-Practice/: readme.md
Agents/Azure-MCP-Solution/: mcp_server_weather.py  readme.md
Agents/Best-practices-for-MaaS-and-SLM/: README.MD
Agents/Deep-Research-Usage/: deep_research_usage.py  readme.md  setup_sp_and_auth.py
Agents/Foundry-Local/: readme.md
Agents/GPT-Image-1/: generate_image.sh  readme.md
Agents/KV-Cache-Quantization/: Quantize_the_KV_Cache.ipynb  README.MD
Agents/LLM-Alignment-DPO-RHLF-CPO/: Memory_efficient_LLM_Alignment_with_SimPO_Example_with_Llama_3_and_Comparison_with_CPO.ipynb  readme.md
Agents/Perplexity-test/: readme.md
Agents/Phi-RAG/: README.MD
Agents/Phi3-RAG/: db.py  keyword_generator.py  requirements.txt
Agents/Prompt-Engineer-Examples/: README.MD
Code-of-Book/: README.md  desktop.ini
Multimodal-Models/: README.MD
OpenShift/: Egress IP的配置与删除  OCP4_Operator_Lab.txt  OCP4_TLS_Lab.txt  OCP_Limit Ranges_HPA.txt  OpenShift 4.5.3在Openstack上的UPI离线安装.txt  OpenShift Machine API Operator的架构与运维.txt  OpenShift在Openstack上的UPI离线安装.txt  Scheduler_Solution_Lab.txt  mcp  networkpolicy_lab  nexus3-template.yaml  node-exporter-dashboard_rev1.json  pv.sh  report.html
docs/: player.html.txt
(+280 files in other folders)
